# cbu_homecoming_2018

./: .gitignore  .gitmodules  Pipfile  README.md  demo_gui.py  markov.py  opencv_gui_utils.py  pyproject.toml  rps.py  rps_clean.py  workspace.sublime-workspace
evilrps/: __init__.py
img/: dice.xcf  paper.xcf  restart.xcf  rock.xcf  scissors.xcf
opencv_gui_utils/: __init__.py
