[tool.poetry]
name = "cbu_homecoming_2018"
version = "0.1.0"
description = ""
authors = ["Christopher Chen <christopher.chen1995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydot = "^1.4.2"
numpy = "^1.21.0"
opencv-python = "^4.5.2"
remi = "^2021.3.2"
pymarkoff = {git = "https://bitbucket.org/TheCDC/pymarkoff"}
"evil rock-paper-scissors" = {git = "https://github.com/TheCDC/evil_rock_paper_scissors"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
